Made JSON file for task manager

--- a/data/tasks.json
+++ b/data/tasks.json
@@ -1,74 +1,46 @@
 {
-  "notifications": [
+  "tasks": [
 	{
-		"id": "1",
-		"name": "Huggy Sugar-Gold",
-		"title": "Property Owner",
-		"picture_file": "Huggy Sugar-Gold Thumbnail.png",
-		"text": "Hello, you two! I see that you're both prepared to to work... Well, great! You have a lot to do around here."
+		"uid": 0,
+		"name": "Clean Water Filter",
+		"reward": null
 	},
 	{
-		"id": "2",
-		"name": "Huggy Sugar-Gold",
-		"title": "Property Owner",
-		"picture_file": "Huggy Sugar-Gold Thumbnail.png",
-		"text": "What do I mean? Look at this place! There is not even a Shed to lock our tools in! How are my people supposed to work in an environment like this... Shed, you understand?"
+		"uid": 1,
+		"name": "Unclog the Trash Bin",
+		"reward": {
+			"amount": 40,
+			"resource": "Scrap"
+		}
 	},
 	{
-		"id": "3",
-		"name": "Huggy Sugar-Gold",
-		"title": "Property Owner",
-		"picture_file": "Huggy Sugar-Gold Thumbnail.png",
-		"text": "You need my help? Why do I-.....Just. Grab the trash."
+		"uid": 2,
+		"name": "Fix the Wind Turbines",
+		"reward": null
 	},
 	{
-		"id": "4",
-		"name": "Huggy Sugar-Gold",
-		"title": "Property Owner",
-		"picture_file": "Huggy Sugar-Gold Thumbnail.png",
-		"text": "Great job! See, now this place looks half decent! I can already see it, the stores, the items, the hungry, starving collectors with rivers of money... Anyways, Here's the rest I owe you."
+		"uid": 3,
+		"name": "Check batteries (Wind Turbines)",
+		"reward": {
+			"amount": 50,
+			"resource": "Energy"
+		}
 	},
 	{
-		"id": "5",
-		"name": "Huggy Sugar-Gold",
-		"title": "Property Owner",
-		"picture_file": "Huggy Sugar-Gold Thumbnail.png",
-		"text": "What are you still doing here? I can't be the only customer you have! There is plenty of people who have been affected by those monkeys..."
+		"uid": 4,
+		"name": "Check batteries (Water Filter)",
+		"reward": {
+			"amount": 50,
+			"resource": "Energy"
+		}
 	},
 	{
-		"id": "6",
-		"name": "Greasy Jim Winterkorn",
-		"title": "Craftsman",
-		"picture_file": "Greasy Jim Thumbnail.png",
-		"text": "Hey mates! Soo, ye see, I've been doin a lot here... Still I need som' help. So just... do yer thing, yeah? I'm... I got otha stuff to do."
-	},
-	{
-		"id": "7",
-		"name": "Greasy Jim Winterkorn",
-		"title": "Craftsman",
-		"picture_file": "Greasy Jim Thumbnail.png",
-		"text": "Ye see, I need a place to work. Somethin' like a Recycling Workshop, so I can do somethin' about all this trash they keep throwing ou' way..."
-	},
-	{
-		"id": "8",
-		"name": "Greasy Jim Winterkorn",
-		"title": "Craftsman",
-		"picture_file": "Greasy Jim Thumbnail.png",
-		"text": "Yeah... Huh? Whatcha mean, ye aint done nothin' yet! Aishh, I aint got all day, mate! Just fixin' alla that, easy!"
-	},
-	{
-		"id": "9",
-		"name": "Greasy Jim Winterkorn",
-		"title": "Craftsman",
-		"picture_file": "Greasy Jim Thumbnail.png",
-		"text": "Sheat, look at this, haha, I knew ye could do it. Here' the payment. Maybe one day ye can make a place like this for yerselves."
-	},
-	{
-		"id": "10",
-		"name": "Greasy Jim Winterkorn",
-		"title": "Craftsman",
-		"picture_file": "Greasy Jim Thumbnail.png",
-		"text": "Yeah Yeah, my boss it sureley gon like this, hehe. Easy work, anotha easy day fo' me."
+		"uid": 5,
+		"name": "Recycle Trash",
+		"reward": {
+			"amount": 50,
+			"resource": "Scrap"
+		}
 	}
-  ]
+]
 }
